package com.ebobalo;

public interface ILostTicket {

    double LOST_TICKET_FEE = 25.00;
    boolean TICKET_LOST = true;

    String Specification();
}
