package com.ebobalo;

public interface ISpecialEvent {

    double SPECIAL_EVENT_FEE = 20.00;
    boolean ITS_SPECIAL = true;

    String Specification();
}

