@startuml
skinparam classHeaderBackgroundColor orange


class ParkingGarageRunner{}

class Client{}

class MainMenu{}
class CheckOutMenu{}
class CheckInMenu{}

class Controller{}
class FeeFactory{}

class ILostTicket{}
class LostTicket{}
class LostTicketSetUp{}

class ISpecialEvent{}
class SpecialEventSetUp{}
class SpecialEvent{}

class IMinMax{}
class MinMax{}
class MinMaxSetUp{}

ParkingGarageRunner --|> MainMenu

MainMenu --|> CheckInMenu
MainMenu --|> CheckOutMenu

CheckInMenu --|> Controller
CheckOutMenu --|> Controller

Controller --|> FeeFactory

FeeFactory --|> Client

Client --> ILostTicket
Client --> ISpecialEvent
Client --> IMinMax

ILostTicket --> LostTicket
LostTicket <--> LostTicketSetUp

ISpecialEvent --> SpecialEvent
SpecialEvent <--> SpecialEventSetUp

IMinMax --> MinMax
MinMax <--> MinMaxSetUp


@enduml